navbar horizontall scrollbar fixed

--- a/css/sass/3-layout/_navBar.scss
+++ b/css/sass/3-layout/_navBar.scss
@@ -171,9 +171,11 @@
   }
 
   .header__rightNav {
-   
     width: 50%;
-    margin: 0rem;
+    margin-right: 6rem;
+    margin-top: 3rem;
     
   }
 }
+
+
