--- a/css/style.css
+++ b/css/style.css
@@ -596,7 +596,8 @@ body {
   }
   .header__rightNav {
     width: 50%;
-    margin: 0rem;
+    margin-right: 6rem;
+    margin-top: 3rem;
   }
 }
 
